--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@ img {
 }
 
 h1, h2 {
+  font-family: "Patua One", sans-serif;
   color: #5d8432;
   text-transform: uppercase;
 }
@@ -20,6 +21,7 @@ figcaption {
 }
 
 nav {
+  font-family: "Patua One", sans-serif;
   font-size: 1.125rem;
   font-weight: bold;
 }
@@ -29,6 +31,7 @@ nav ol {
 }
 
 nav a {
+  text-decoration: none;
   color: #793284;
 }
 
